[gd_scene load_steps=5 format=3 uid="uid://cb0lx7tbhrucv"]

[ext_resource type="PackedScene" uid="uid://coqqvulhamf4t" path="res://game/entity/enemy/mite/mite_model.tscn" id="1_hxhnp"]
[ext_resource type="Script" path="res://game/entity/enemy/mite/mite.gd" id="1_mlp7p"]
[ext_resource type="Script" path="res://game/entity/component/health_component.gd" id="3_mi2vp"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_22pua"]
radius = 16.0
height = 66.0

[node name="Mite" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_mlp7p")

[node name="Model" parent="." instance=ExtResource("1_hxhnp")]
scale = Vector2(3, 3)

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, -16)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_22pua")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_mi2vp")
health = 20

[node name="Raycasts" type="Node2D" parent="."]

[node name="WallChecker" type="RayCast2D" parent="Raycasts"]
position = Vector2(-33, -16)
target_position = Vector2(-1, 0)
collision_mask = 2
hit_from_inside = true

[node name="EdgeChecker" type="RayCast2D" parent="Raycasts"]
position = Vector2(-1, 0)
target_position = Vector2(0, 1)
collision_mask = 2
hit_from_inside = true
